--- a/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/business-blank.html
@@ -55,7 +55,12 @@
 
                   <dl class="govuk-summary-list">
                       <div class="govuk-summary-list__row">
-                        {{ data['business-details-address_1'] }}, {{ data['business-details-address_2'] }},  {{ data['business-details-city'] }},  {{ data['business-details-county'] }},  {{ data['business-details-postcode'] }},  {{ data['business-details-country'] }}
+                        {{ data['business-details-address_1'] }}
+                        {% if data['business-details-address_2'] %}, {{ data['business-details-address_2'] }}{% endif %}
+                        {% if data['business-details-city'] %}, {{ data['business-details-city'] }}{% endif %}
+                        {% if data['business-details-county'] %}, {{ data['business-details-county'] }}{% endif %}
+                        {% if data['business-details-postcode'] %}, {{ data['business-details-postcode'] }}{% endif %}
+                        {% if data['business-details-country'] %}, {{ data['business-details-country'] }}{% endif %}
                         </dt>
                         <dd class="govuk-summary-list__actions">
                           <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
@@ -78,8 +83,18 @@
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">{{ data['business-details-email'] }}</p>
               <p class="govuk-body">{{ data['business-details-phone'] }}</p>
-              <p class="govuk-body">{{ data['business-details-address_1'] }}, {{ data['business-details-address_2'] }},  {{ data['business-details-city'] }},  {{ data['business-details-county'] }},  {{ data['business-details-postcode'] }},  {{ data['business-details-country'] }}</p>
-            </dd>
+              <p class="govuk-body">
+                {{ data['business-details-address_1'] }}
+                {% if data['business-details-address_2'] %}, {{ data['business-details-address_2'] }}{% endif %}
+                {% if data['business-details-city'] %}, {{ data['business-details-city'] }}{% endif %}
+                {% if data['business-details-county'] %}, {{ data['business-details-county'] }}{% endif %}
+                {% if data['business-details-postcode'] %}, {{ data['business-details-postcode'] }}{% endif %}
+                {% if data['business-details-country'] %}, {{ data['business-details-country'] }}{% endif %}
+              </p>
+        
+              
+              
+                          </dd>
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
                 <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="">Add<span class="govuk-visually-hidden"> contact details</span></a></li>
@@ -88,8 +103,7 @@
             </dd>
           </div>
         </dl>
-        </div>
-      </div>
+
 
 
       <form class="form" action="business-blank" method="post">
