--- a/app/views/psd-revised-flow/add-business-to-notification/enter-business-details.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/enter-business-details.html
@@ -75,7 +75,7 @@ Enter the business details – {{ serviceName }} – GOV.UK Prototype Kit
     <label class="govuk-label" for="add_business_to_case_form_locations_attributes_0_country">Country</label>
         <select class="govuk-select" id="business-details-country" name="business-details-country">
         <option selected="selected">Select a country</option>
-        <option value="country:GB">United Kingdom</option>
+        <option value="United Kingdom">United Kingdom</option>
         <option value="territory:AE-AZ">Abu Dhabi</option>
         <option value="country:AF">Afghanistan</option>
         <option value="territory:AE-AJ">Ajman</option>
