--- a/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
@@ -110,6 +110,32 @@
         <td class="govuk-table__cell">01730248</td>
         <td class="govuk-table__cell">24 Rose Walk, Cheshunt, EN16 7GY, UK</td>
       </tr>
+      <tr>
+        <td class="govuk-table__cell"><a href="#">Dream Designs</a></td>
+        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">01281233</td>
+        <td class="govuk-table__cell">Holly Drive, Hay-on-Wye, Powys, HR3 5BT, UK</td>
+      </tr>
+      <tr>
+        <td class="govuk-table__cell"><a href="duplicate-business">Dream Manufacturing Ltd</a></td>
+        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">01169426</td>
+        <td class="govuk-table__cell">Building 5, Willow Estate, Riber Road, Buxton, SK17 6BH, UK</td>
+      </tr>
+    <tr>
+      <td class="govuk-table__cell"><a href="#">Dreamtech Electronics Ltd</a></td>
+      <td class="govuk-table__cell">Dissolved</td>
+      <td class="govuk-table__cell">012965644</td>
+      <td class="govuk-table__cell">56 Maple Street, Uckfield, TN22 1PH, UK</td>
+    </tr>
+
+      <tr>
+        <td class="govuk-table__cell"><a href="#">Dreamtime Bedding Ltd</a></td>
+        <td class="govuk-table__cell">Active</td>
+        <td class="govuk-table__cell">012823551</td>
+        <td class="govuk-table__cell">72 Birchwood Road, Wotton-under-Edge, GL12 7AJ, UK</td>
+      </tr>
+
   </tbody>
 </table>
 
