--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -471,7 +471,7 @@ $opss-retired-bg: govuk-tint(govuk-colour("light-grey"), 50);
     linear-gradient(to top right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) calc(50% - 1px), $govuk-border-colour 50%, rgba(0, 0, 0, 0) calc(50% + 1px), rgba(0, 0, 0, 0) 100%);
 }
 
-@media screen and (min-width: 0\0) and (min-resolution: +72dpi) {
+@media screen and (min-width: 0\0) and (min-resolution: 72dpi) {
 
   // ie9+ only
   .opss-cross-through {
